--- a/index.qmd
+++ b/index.qmd
@@ -10,3 +10,4 @@ bibliography: professional_development.bib
 
 -   [Chapter 5 Notes](chapter_05_notes.qmd){.external target="_blank"}
 -   [Chapter 25 Notes](chapter_25_notes.qmd){.external target="_blank"}
+-   [Chapter 26 Notes](chapter_26_notes.qmd){.external target="_blank"}
