push after render

--- a/chapter_26_notes.qmd
+++ b/chapter_26_notes.qmd
@@ -880,7 +880,7 @@ To write each of these files to disk, we need to vary two arguments, the object 
 ```{r}
 
 
-walk2(by_clarity$data, by_clarity$path, write_csv)
+# walk2(by_clarity$data, by_clarity$path, write_csv)
 
 ```
 
@@ -929,167 +929,3 @@ Now use `walk2()` again:
 
 
 ```
-
-
-```{r}
-
-
-
-
-```
-
-
-
-```{r}
-
-
-
-
-```
-
-
-```{r}
-
-
-
-
-```
-
-
-
-```{r}
-
-
-
-
-```
-
-
-
-
-
-```{r}
-
-
-
-
-```
-
-
-```{r}
-
-
-
-
-```
-
-
-
-```{r}
-
-
-
-
-```
-
-
-```{r}
-
-
-
-
-```
-
-
-
-```{r}
-
-
-
-
-```
-
-
-```{r}
-
-
-
-
-```
-
-
-
-```{r}
-
-
-
-
-```
-
-
-
-
-```{r}
-
-
-
-
-```
-
-
-```{r}
-
-
-
-
-```
-
-
-
-```{r}
-
-
-
-
-```
-
-
-```{r}
-
-
-
-
-```
-
-
-
-```{r}
-
-
-
-
-```
-
-
-```{r}
-
-
-
-
-```
-
-
-
-```{r}
-
-
-
-
-```
-
-
-
-
-
-
-
