--- a/chapter_10_notes.qmd
+++ b/chapter_10_notes.qmd
@@ -12,113 +12,382 @@ editor_options:
 
 # Exploratory data analysis
 
-```{r}
+## 10.2 Questions
 
 
+Two types of questions are generally useful:
 
-```
+1. What type of variation occurs within my variables?
 
-
-```{r}
-
-
-
-```
+2. What type of covariation occurs between my variables?
 
 
+## 10.3 Variation
 
-```{r}
-
-
-
-```
-
-
-
+Both within and across units.
 
 ```{r}
 
-
-
-```
-
-
-
-```{r}
-
-
+ggplot(diamonds, aes(x = carat)) +
+  geom_histogram(binwidth = 0.5)
 
 ```
 
+More questions to ask:
 
+-   Which values are the most common? Why?
 
+-   Which values are rare? Why? Does that match your expectations?
+
+-   Can you see any unusual patterns? What might explain them?
 
 
 ```{r}
 
+smaller <- diamonds |> 
+  filter(carat < 3)
 
+ggplot(smaller, aes(x = carat)) +
+  geom_histogram(binwidth = 0.01)
 
 ```
+
+Examples of follow-up questions for this plot:
+
+-   Why are there more diamonds at whole carats and common fractions of carats?
+
+-   Why are there more diamonds slightly to the right of each peak than there are slightly to the left of each peak?
+
+
+Data visualization can reveal clusters. To understand subgroups:
+
+-   How are the observations within each subgroup similar to each other?
+
+-   How are the observations in separate clusters different from each other?
+
+-   How can you explain or describe the clusters?
+
+-   Why might the appearance of clusters be misleading?
+
+
+## 10.4 Unusual values
+
+
+Sometimes these are hard to see, but you can tell by the limits of the x-axis sometimes:
+
+```{r}
+
+ggplot(diamonds, aes(x = y)) + 
+  geom_histogram(binwidth = 0.5)
+
+```
+
+
+You can zoom in on areas of your plot using `coord_cartesian`.
+
+
+```{r}
+
+ggplot(diamonds, aes(x = y)) + 
+  geom_histogram(binwidth = 0.5) +
+  coord_cartesian(ylim = c(0, 50))
+
+```
+
+
+Three unusual values at about 0, 30, and 60
+
+```{r}
+
+unusual <- diamonds |> 
+  filter(y < 3 | y > 20) |> 
+  select(price, x, y, z) |>
+  arrange(y)
+unusual
+#> # A tibble: 9 × 4
+#>   price     x     y     z
+#>   <int> <dbl> <dbl> <dbl>
+#> 1  5139  0      0    0   
+#> 2  6381  0      0    0   
+#> 3 12800  0      0    0   
+#> 4 15686  0      0    0   
+#> 5 18034  0      0    0   
+#> 6  2130  0      0    0   
+#> 7  2130  0      0    0   
+#> 8  2075  5.15  31.8  5.12
+#> 9 12210  8.09  58.9  8.06
+
+```
+
+
+One approach is to replace unusual values with `NA`.
+
+
+```{r}
+
+diamonds2 <- diamonds |> 
+  mutate(y = if_else(y < 3 | y > 20, NA, y))
+
+```
+
+
+ggplot excludes `NA` values:
+
+```{r}
+
+ggplot(diamonds2, aes(x = x, y = y)) + 
+  geom_point()
+#> Warning: Removed 9 rows containing missing values or values outside the scale range
+#> (`geom_point()`).
+
+```
+
+You can suppress the missing warning like this:
+
+
+```{r}
+
+ggplot(diamonds2, aes(x = x, y = y)) + 
+  geom_point(na.rm = TRUE)
+
+```
+
+
+Investigating missing values is also important. Understand the patterns of missingness. Here, missing values in the `dep_time` variable indicate that the flight was cancelled.
+
+
+```{r}
+
+nycflights13::flights |> 
+  mutate(
+    cancelled = is.na(dep_time),
+    sched_hour = sched_dep_time %/% 100,
+    sched_min = sched_dep_time %% 100,
+    sched_dep_time = sched_hour + (sched_min / 60)
+  ) |> 
+  ggplot(aes(x = sched_dep_time)) + 
+  geom_freqpoly(aes(color = cancelled), binwidth = 1/4)
+
+```
+
+
+## 10.5 Covariation
+
+When two variables vary together. Plot them.
+
+**A categorical and numerical**.
+
+```{r}
+
+ggplot(diamonds, aes(x = price)) + 
+  geom_freqpoly(aes(color = cut), binwidth = 500, linewidth = 0.75)
+
+```
+
+Hard to compare because counts are so different. Use the **density**, which is the count standardized so that the area under each frequency polygon is one.
 
 
 
 ```{r}
 
-
+ggplot(diamonds, aes(x = price, y = after_stat(density))) + 
+  geom_freqpoly(aes(color = cut), binwidth = 500, linewidth = 0.75)
 
 ```
 
 
+Do fair cuts have the highest average price as indicated by the prior plot?
 
 
 ```{r}
 
-
+ggplot(diamonds, aes(x = cut, y = price)) +
+  geom_boxplot()
 
 ```
 
+Why are better quality cuts cheaper?
+
+
+How does highway mileage vary across classes?
+
+```{r}
+
+ggplot(mpg, aes(x = class, y = hwy)) +
+  geom_boxplot()
+
+```
+
+Temporarily reordering factors would make the trend easier to see:
 
 
 ```{r}
 
-
+ggplot(mpg, aes(x = fct_reorder(class, hwy, median), y = hwy)) +
+  geom_boxplot()
 
 ```
 
 
-
+Long variable names look better if you flip the x and y aesthetic mappings:
 
 
 ```{r}
 
-
+ggplot(mpg, aes(x = hwy, y = fct_reorder(class, hwy, median))) +
+  geom_boxplot()
 
 ```
 
+
+
+**Two categorical variables**.
+
+Count the cell values in the cross tabulation table and then plot.
+
+```{r}
+
+ggplot(diamonds, aes(x = cut, y = color)) +
+  geom_count()
+
+```
+
+
+Generate the counts
+
+```{r}
+
+diamonds |> 
+  count(color, cut)
+#> # A tibble: 35 × 3
+#>   color cut           n
+#>   <ord> <ord>     <int>
+#> 1 D     Fair        163
+#> 2 D     Good        662
+#> 3 D     Very Good  1513
+#> 4 D     Premium    1603
+#> 5 D     Ideal      2834
+#> 6 E     Fair        224
+#> # ℹ 29 more rows
+
+```
+
+
+And then visualize with `geom_tile()`.
+
+```{r}
+
+diamonds |> 
+  count(color, cut) |>  
+  ggplot(aes(x = color, y = cut)) +
+  geom_tile(aes(fill = n))
+
+```
+
+
+
+**Two numerical variables**.
+
+```{r}
+
+ggplot(smaller, aes(x = carat, y = price)) +
+  geom_point()
+
+```
+
+Overplotting can be a problem. You can use `alpha`:
+
+```{r}
+
+ggplot(smaller, aes(x = carat, y = price)) + 
+  geom_point(alpha = 1 / 100)
+
+```
+
+
+Another solution to overplotting is binning. `geom_histogram()` and `geom_freqpoly()` bin in one dimension. Use `geom_bin2d()` and `geom_hex()` to bin in two dimensions. The difference is between rectangular bins and hexagonal bins. Install the `hexbin` package to use `geom_hex()`.
+
+```{r}
+
+ggplot(smaller, aes(x = carat, y = price)) +
+  geom_bin2d()
+#> `stat_bin2d()` using `bins = 30`. Pick better value `binwidth`.
+
+# install.packages("hexbin")
+ggplot(smaller, aes(x = carat, y = price)) +
+  geom_hex()
+
+```
+
+
+You can also bin one numerical variable, so that you are plotting a categorical and numerical:
 
 
 ```{r}
 
-
+ggplot(smaller, aes(x = carat, y = price)) + 
+  geom_boxplot(aes(group = cut_width(carat, 0.1)))
+#> Warning: Orientation is not uniquely specified when both the x and y aesthetics are
+#> continuous. Picking default orientation 'x'.
 
 ```
 
 
+You can make the width of boxplots proportional to number of observations with `varwidth = TRUE`.
 
 
 ```{r}
 
-
+ggplot(smaller, aes(x = carat, y = price)) + 
+  geom_boxplot(aes(group = cut_width(carat, 0.1)), varwidth = TRUE)
 
 ```
 
+
+
+## 10.6 Patterns and models
+
+More questions to ask:
+
+-   Could this pattern be due to coincidence (i.e. random chance)?
+
+-   How can you describe the relationship implied by the pattern?
+
+-   How strong is the relationship implied by the pattern?
+
+-   What other variables might affect the relationship?
+
+-   Does the relationship change if you look at individual subgroups of the data?
 
 
 ```{r}
 
+library(tidymodels)
 
+diamonds <- diamonds |>
+  mutate(
+    log_price = log(price),
+    log_carat = log(carat)
+  )
+
+diamonds_fit <- linear_reg() |>
+  fit(log_price ~ log_carat, data = diamonds)
+
+diamonds_aug <- augment(diamonds_fit, new_data = diamonds) |>
+  mutate(.resid = exp(.resid))
+
+ggplot(diamonds_aug, aes(x = carat, y = .resid)) + 
+  geom_point()
 
 ```
 
 
+Now you can see the relationship between cut and price: better quality diamonds are more expensive relative to size.
+
+```{r}
+
+ggplot(diamonds_aug, aes(x = cut, y = .resid)) + 
+  geom_boxplot()
+
+```
 
