--- a/index.qmd
+++ b/index.qmd
@@ -10,6 +10,9 @@ bibliography: professional_development.bib
 
 -   [Chapter 5 Notes](chapter_05_notes.qmd){.external target="_blank"}
 -   [Chapter 9 Notes](chapter_09_notes.qmd){.external target="_blank"}
+-   [Chapter 10 Notes](chapter_10_notes.qmd){.external target="_blank"}
+-   [Chapter 11 Notes](chapter_11_notes.qmd){.external target="_blank"}
 -   [Chapter 12 Notes](chapter_12_notes.qmd){.external target="_blank"}
+-   [Chapter 17 Notes](chapter_17_notes.qmd){.external target="_blank"}
 -   [Chapter 25 Notes](chapter_25_notes.qmd){.external target="_blank"}
 -   [Chapter 26 Notes](chapter_26_notes.qmd){.external target="_blank"}
